<resources>
    <string name="app_name">Login_registration</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="submit">Submit</string>
    <string name="error_while_loggin_in">Error while loggin in</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="logout">logout</string>
    <string name="fetch_user">Fetch user</string>
    <string name="click_here_to_register">Click here to register</string>
</resources>